# libcronet

./: .clang-format  .gitignore  MODULE.bazel
.github/workflows/: release.yml
bazel/: cronet_native.MODULE.bazel  prebuilt_cronet_native.MODULE.bazel
cronet_http/: BUILD  client.cc  client.h  request.h  response.cc  response.h  sample_executor.cc  upload_data_provider.cc  upload_data_provider.h
cronet_http/internal/: BUILD  executor.cc  executor.h  memory.h
examples/cronet_http/: BUILD  hello_world.cc
examples/cronet_native/: BUILD
examples/prebuilt_cronet_native/: BUILD  README.md
patches/: 0001-Enable-EVRootCAMetadata-in-Linux-w-o-NSS.patch  0002-Allow-Linux-build-without-NSS-certs.patch  0003-Initialize-commandline-for-cronet-to-prevent-crashes.patch  0004-Bring-back-cronet-native-build-rules.patch  0004-Hide-private-cronet-symbols.patch  0006-Enable-AIA-chasing.patch
scripts/: build.sh  package.sh
